# rtc-tools-simulation

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/source/: conf.py  docs.rst  example_models.rst  getting_started.rst  index.rst  lookup_table.rst  reservoir.rst
docs/source/examples/: single_reservoir.rst
docs/source/reservoir/: api.rst  dummy.rst  examples.rst  initial_conditions.rst  single_reservoir_model.rst  template_generation.rst
examples/adjust_example/: adjust_example.py
examples/adjust_example/input/: plot_table.csv  rtcDataConfig.xml  timeseries_import.xml
examples/facilities_example/: facilities_example.py
examples/facilities_example/input/: rtcDataConfig.xml
examples/facilities_example/lookup_tables/: facilities.json
examples/fillspill_example/: fillspill_example.py
examples/fillspill_example/input/: plot_table.csv  rtcDataConfig.xml  rtcParameterConfig.xml  timeseries_import.xml
examples/french_meadow/: french_meadow.py
examples/french_meadow/lookup_tables/: spillwaydischarge.csv
examples/maxq_example/: maxq_example.py
examples/maxq_example/input/: plot_table.csv  rtcDataConfig.xml  timeseries_import.xml
examples/minq_example/: minq_example.py
examples/passflow_example/: passflow_example.py
examples/poolq_example/: poolq_example.py
examples/rainevap_example/: rainevap_example.py
examples/rulecurve_example/: rulecurve_example.py
examples/set_q/: set_q_example.py
examples/set_q_example/: set_q_example.py
examples/single_reservoir/: single_reservoir.py
examples/spillway_example/: spillway_example.py
examples/suminf_floodflag_example/: suminf_floodflag_example.py
rtctools_simulation/: lookup_table.py  model.py  optimization_problem.py  simulate.py
rtctools_simulation/reservoir/: _variables.py  fillspill.py  minq.py  model.py  rule_curve.py  rule_curve_deviation.py  setq_help_functions.py
rtctools_simulation_modelling_extension/: lookup_table.py  model.py  model_config.py
rtctools_simulation_modelling_extension/cli/: reservoir.py
rtctools_simulation_modelling_extension/reservoir/: model.py  read_csv.py  setq_help_functions.py
src/reservoir/: help_functions.py  read_csv.py  reservoir_csv.py
tests/: adjust_test.py  cli_test.py  dummy_test.py  example_test.py  fillspill_test.py  flood_flag_test.py  interpolation_test.py  lookup_table_test.py  maxq_test.py  minq_test.py  passflow_test.py  poolq_test.py  rainevap_test.py  reservoir_template_test.py  rule_curve_deviation_test.py  rule_curve_test.py  setq_test.py  simulate_test.py  spillway_test.py  sum_inflow_test.py  test_rule_curve_deviation.py
tests/lookup_tables/: bad_input_grid.csv  h_from_v.csv  lookup_table_equations.csv  lookup_table_equations_bad.csv  lookup_tables.csv  qout_from_day_h.csv  qout_from_single_day_h.csv  qspill_from_h.csv
(+125 files in other folders)
