# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# for info on toml setup files.
[build-system]
requires = ["setuptools"]

[project]
name = "rtc-tools-simulation-modelling-extension"
authors = [{name = "Deltares"}]
description = "Extension for building models used for simulation in rtc-tools."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
]
dynamic = ["version"]

[tool.ruff]
line-length = 100
select = [
    # For an overview of options; see https://docs.astral.sh/ruff/rules
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # default / pycodestyle
    "F", # default / pyflakes
    "I", # isort
    "N", # pep8-naming
    "PL", # pylint 
    "W", # pycodestyle
]

[tool.ruff.lint.pylint]
max-args = 10
