# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# for info on toml setup files.
[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["rtctools_simulation", "rtctools_simulation.reservoir"]

[project]
name = "rtc-tools-simulation"
authors = [{ name = "Deltares" }]
description = "Extension for building models used for simulation in rtc-tools."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "casadi >= 3.6.3, == 3.6.*",
    "Jinja2",
    "numpy",
    "pandas",
    "rtc-tools >= 2.6",
    "rtc-tools-interface == 0.7.*",
]
dynamic = ["version"]

[project.scripts]
rtc-tools-reservoir-template = "rtctools_simulation.cli.reservoir:create_reservoir_template"

[tool.ruff]
line-length = 100
select = [
    # For an overview of options; see https://docs.astral.sh/ruff/rules
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # default / pycodestyle
    "F",  # default / pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PL", # pylint 
    "W",  # pycodestyle
]

[tool.ruff.lint.pylint]
max-args = 10
